# KNN_GPU

./: .gitattributes  Example_Results.txt  README.md
Finalterm-Assignment/: CMakeLists.txt  loadFiles.cpp  loadFiles.h  mainCUDA.cu  utils.cpp  utils.h
